[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool]
[tool.black]
line-length = 120
target-version = ["py37", "py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "plexiglass"
version = "0.0.1"
description = "Pure Python common utilities"
authors = ["Eric Lee <elee@kududyn.com>"]
readme = "README.md"
repository = "https://github.com/kudu/plexiglass"
homepage = "https://github.com/kudu/plexiglass"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "==3.*,>=3.7.0"
structlog = ">=18.2.0"
synapse = {version = "<0.2.0",optional = true}

[tool.poetry.dev-dependencies]
colorama = "*"
pytest = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-flake8 = "*"

[tool.poetry.extras]
synapse = ["synapse"]

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
